@@ -1,15 +1,14 @@
 package com.qsp.springboot;
 
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.MediaType;
-import org.springframework.mail.javamail.JavaMailSender;
+// import org.springframework.mail.javamail.JavaMailSender;
+import org.springframework.mail.javamail.JavaMailSenderImpl;
 import org.springframework.mail.javamail.MimeMessageHelper;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestPart;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 import org.springframework.web.multipart.MultipartFile;
 import org.apache.poi.ss.usermodel.*;
 import org.apache.poi.xssf.usermodel.XSSFWorkbook;
+// import org.apache.poi.openxml4j.exceptions.InvalidFormatException;
 import jakarta.mail.internet.MimeMessage;
 
 import java.io.FileOutputStream;
@@ -18,19 +17,22 @@ import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Properties;
 
 @RestController
+@CrossOrigin(origins = "*")
 public class MailController {
-    @Autowired
-    private JavaMailSender javaMailSender;
+    // Not using the autowired JavaMailSender because we create a custom one per-request
+    // kept here in case future endpoints want the default sender
+    // @Autowired
+    // private JavaMailSender javaMailSender;
 
     public static class EmailRequest {
         private List<String> to;
         private String subject;
         private String text;
-        // optional per-request smtp credentials
-        private String smtpUser;
-        private String smtpPass;
+        private String senderEmail;
+        private String senderPassword;
 
         public List<String> getTo() { return to; }
         public void setTo(List<String> to) { this.to = to; }
@@ -38,17 +40,15 @@ public class MailController {
         public void setSubject(String subject) { this.subject = subject; }
         public String getText() { return text; }
         public void setText(String text) { this.text = text; }
-        public String getSmtpUser() { return smtpUser; }
-        public void setSmtpUser(String smtpUser) { this.smtpUser = smtpUser; }
-        public String getSmtpPass() { return smtpPass; }
-        public void setSmtpPass(String smtpPass) { this.smtpPass = smtpPass; }
+        public String getSenderEmail() { return senderEmail; }
+        public void setSenderEmail(String senderEmail) { this.senderEmail = senderEmail; }
+        public String getSenderPassword() { return senderPassword; }
+        public void setSenderPassword(String senderPassword) { this.senderPassword = senderPassword; }
     }
 
     @PostMapping(value = "/maile", consumes = MediaType.MULTIPART_FORM_DATA_VALUE)
     public String sendMail(@RequestPart(value = "email", required = true) EmailRequest emailRequest,
-                           @RequestPart(value = "file", required = false) MultipartFile file,
-                           @RequestPart(value = "smtpUser", required = false) String smtpUser,
-                           @RequestPart(value = "smtpPass", required = false) String smtpPass) {
+                           @RequestPart(value = "file", required = false) MultipartFile file) {
         try {
             List<String> sentRecipients = new ArrayList<>();
             List<String> failedRecipients = new ArrayList<>();
@@ -60,43 +60,35 @@ public class MailController {
                 return "Error: At least one recipient email is required";
             }
 
-            // Determine which mail sender to use: per-request if credentials provided, else autowired
-            var mailSenderToUse = this.javaMailSender;
-            org.springframework.mail.javamail.JavaMailSenderImpl tempSender = null;
-            if ((smtpUser != null && !smtpUser.isBlank()) || (emailRequest.getSmtpUser() != null && !emailRequest.getSmtpUser().isBlank())) {
-                String user = (smtpUser != null && !smtpUser.isBlank()) ? smtpUser : emailRequest.getSmtpUser();
-                String pass = (smtpPass != null && !smtpPass.isBlank()) ? smtpPass : emailRequest.getSmtpPass();
-                // build a JavaMailSenderImpl for this request
-                tempSender = new org.springframework.mail.javamail.JavaMailSenderImpl();
-                tempSender.setHost("smtp.gmail.com");
-                tempSender.setPort(587);
-                tempSender.setUsername(user);
-                tempSender.setPassword(pass);
-                java.util.Properties props = tempSender.getJavaMailProperties();
-                props.put("mail.transport.protocol", "smtp");
-                props.put("mail.smtp.auth", "true");
-                props.put("mail.smtp.starttls.enable", "true");
-                props.put("mail.smtp.starttls.required", "true");
-                props.put("mail.smtp.ssl.trust", "smtp.gmail.com");
-                mailSenderToUse = tempSender;
+            // Validate sender credentials
+            if (emailRequest.getSenderEmail() == null || emailRequest.getSenderEmail().isEmpty() ||
+                emailRequest.getSenderPassword() == null || emailRequest.getSenderPassword().isEmpty()) {
+                return "Error: Sender email and password are required";
             }
+
+            // Create custom mail sender with user credentials
+            JavaMailSenderImpl customMailSender = createMailSender(
+                emailRequest.getSenderEmail(), 
+                emailRequest.getSenderPassword()
+            );
 
             // Send email to each recipient
             for (String recipient : emailRequest.getTo()) {
                 try {
-                    MimeMessage message = mailSenderToUse.createMimeMessage();
-                    boolean hasFile = file != null && !file.isEmpty();
-                    MimeMessageHelper helper = new MimeMessageHelper(message, hasFile);
+                    MimeMessage message = customMailSender.createMimeMessage();
+                    MimeMessageHelper helper = new MimeMessageHelper(message, file != null);
+                    helper.setFrom(emailRequest.getSenderEmail());
                     helper.setTo(recipient);
                     helper.setSubject(emailRequest.getSubject());
                     helper.setText(emailRequest.getText());
-                    if (hasFile) {
-                        MultipartFile f = java.util.Objects.requireNonNull(file);
-                        String fname = f.getOriginalFilename();
-                        if (fname == null || fname.isBlank()) fname = "attachment";
-                        helper.addAttachment(fname, f);
+                    if (file != null) {
+                        String fname = file.getOriginalFilename();
+                        if (fname == null || fname.trim().isEmpty()) {
+                            fname = "attachment";
+                        }
+                        helper.addAttachment(fname, file);
                     }
-                    mailSenderToUse.send(message);
+                    customMailSender.send(message);
                     sentRecipients.add(recipient);
                 } catch (Exception e) {
                     failedRecipients.add(recipient + " (" + e.getMessage() + ")");
@@ -104,7 +96,7 @@ public class MailController {
             }
 
             // Save to Excel
-            saveToExcel(sentRecipients, timestamp);
+            saveToExcel(sentRecipients, timestamp, emailRequest.getSenderEmail());
 
             // Prepare response
             StringBuilder response = new StringBuilder();
@@ -124,91 +116,119 @@ public class MailController {
         }
     }
 
-    // Endpoint to test SMTP credentials quickly
-    @PostMapping(value = "/smtp-test", consumes = MediaType.APPLICATION_FORM_URLENCODED_VALUE)
-    public String smtpTest(@org.springframework.web.bind.annotation.RequestParam("smtpUser") String smtpUser,
-                           @org.springframework.web.bind.annotation.RequestParam("smtpPass") String smtpPass) {
-        try {
-            org.springframework.mail.javamail.JavaMailSenderImpl testSender = new org.springframework.mail.javamail.JavaMailSenderImpl();
-            testSender.setHost("smtp.gmail.com");
-            testSender.setPort(587);
-            testSender.setUsername(smtpUser);
-            testSender.setPassword(smtpPass);
-            java.util.Properties props = testSender.getJavaMailProperties();
-            props.put("mail.transport.protocol", "smtp");
-            props.put("mail.smtp.auth", "true");
-            props.put("mail.smtp.starttls.enable", "true");
-            props.put("mail.smtp.starttls.required", "true");
-            props.put("mail.smtp.ssl.trust", "smtp.gmail.com");
+    private JavaMailSenderImpl createMailSender(String email, String password) {
+        JavaMailSenderImpl mailSender = new JavaMailSenderImpl();
+        mailSender.setHost("smtp.gmail.com");
+        mailSender.setPort(587);
+        mailSender.setUsername(email);
+        mailSender.setPassword(password);
 
-            // JavaMailSenderImpl doesn't expose a direct 'test connection' method; use a small transport connect
-            try {
-                var session = testSender.getSession();
-                jakarta.mail.Transport transport = session.getTransport("smtp");
-                try {
-                    transport.connect(testSender.getHost(), testSender.getPort(), smtpUser, smtpPass);
-                } finally {
-                    transport.close();
-                }
-            } catch (Exception connEx) {
-                return "SMTP test failed: " + connEx.getMessage();
-            }
-            return "SMTP test successful";
-        } catch (Exception e) {
-            return "SMTP test error: " + e.getMessage();
-        }
+        Properties props = mailSender.getJavaMailProperties();
+        props.put("mail.smtp.auth", "true");
+        props.put("mail.smtp.starttls.enable", "true");
+        props.put("mail.smtp.starttls.required", "true");
+        props.put("mail.smtp.ssl.trust", "smtp.gmail.com");
+
+        return mailSender;
     }
 
-    private void saveToExcel(List<String> recipients, String timestamp) {
-        // Save to project root; change to absolute path if needed, e.g.:
-        // String filePath = System.getProperty("user.home") + "/Desktop/sent_emails.xlsx";
-    	String filePath = System.getProperty("user.home") + "/Desktop/sent_emails.xlsx";
-        Workbook workbook;
-        Sheet sheet;
-        boolean fileExists = new java.io.File(filePath).exists();
+    private void saveToExcel(List<String> recipients, String timestamp, String senderEmail) {
+        String filePath = System.getProperty("user.home") + "/Desktop/sent_emails.xlsx";
+        Workbook workbook = null;
+        Sheet sheet = null;
+        java.io.File file = new java.io.File(filePath);
 
         try {
-            if (fileExists) {
-                try (var fis = new java.io.FileInputStream(filePath)) {
+            // Ensure recipients is not null
+            if (recipients == null || recipients.isEmpty()) return;
+
+            // Read existing workbook if present
+            if (file.exists()) {
+                try (var fis = new java.io.FileInputStream(file)) {
                     workbook = WorkbookFactory.create(fis);
                 }
                 sheet = workbook.getSheet("Sent Emails");
                 if (sheet == null) {
                     sheet = workbook.createSheet("Sent Emails");
+                    // create header
+                    Row headerRow = sheet.createRow(0);
+                    String[] headers = {"Sender", "Recipient", "Timestamp"};
+                    for (int i = 0; i < headers.length; i++) {
+                        Cell cell = headerRow.createCell(i);
+                        cell.setCellValue(headers[i]);
+                    }
                 }
             } else {
                 workbook = new XSSFWorkbook();
                 sheet = workbook.createSheet("Sent Emails");
-
-                // Create header row
                 Row headerRow = sheet.createRow(0);
-                String[] headers = {"Recipient", "Timestamp"};
+                String[] headers = {"Sender", "Recipient", "Timestamp"};
                 for (int i = 0; i < headers.length; i++) {
                     Cell cell = headerRow.createCell(i);
                     cell.setCellValue(headers[i]);
                 }
             }
 
-            // Find the next available row
-            int rowNum = sheet.getLastRowNum() + (sheet.getLastRowNum() == 0 ? 1 : 0);
+            // Read existing recipients into a Set to avoid duplicates
+            DataFormatter formatter = new DataFormatter();
+            java.util.Set<String> existing = new java.util.HashSet<>();
+            int firstDataRow = 1; // row 0 is header
+            int lastRow = sheet.getLastRowNum();
+            for (int r = firstDataRow; r <= lastRow; r++) {
+                Row row = sheet.getRow(r);
+                if (row == null) continue;
+                Cell recipientCell = row.getCell(1); // Recipient column
+                if (recipientCell == null) continue;
+                String val = formatter.formatCellValue(recipientCell).trim();
+                if (!val.isEmpty()) existing.add(val);
+            }
 
-            // Add data for each recipient
-            for (String recipient : recipients) {
-                Row row = sheet.createRow(rowNum++);
-                row.createCell(0).setCellValue(recipient);
-                row.createCell(1).setCellValue(timestamp);
+            // Filter incoming recipients to only those not already present
+            java.util.List<String> toAppend = new java.util.ArrayList<>();
+            for (String r : recipients) {
+                if (r == null) continue;
+                String trimmed = r.trim();
+                if (trimmed.isEmpty()) continue;
+                if (!existing.contains(trimmed)) {
+                    existing.add(trimmed); // ensure unique within this save
+                    toAppend.add(trimmed);
+                }
+            }
+
+            if (toAppend.isEmpty()) {
+                // Nothing new to write
+                if (workbook != null) workbook.close();
+                return;
+            }
+
+            // Determine the next row: if sheet has only header and getLastRowNum()==0 but no data, start at 1
+            int nextRow = sheet.getLastRowNum();
+            if (nextRow == 0) {
+                // check if row 0 is header; next data row should be 1
+                nextRow = 1;
+            } else {
+                // getLastRowNum returns index of last physical row; place next after it
+                nextRow = sheet.getLastRowNum() + 1;
+            }
+
+            for (String recipient : toAppend) {
+                Row row = sheet.createRow(nextRow++);
+                row.createCell(0).setCellValue(senderEmail);
+                row.createCell(1).setCellValue(recipient);
+                row.createCell(2).setCellValue(timestamp);
             }
 
             // Auto-size columns
-            for (int i = 0; i < 2; i++) {
+            for (int i = 0; i < 3; i++) {
                 sheet.autoSizeColumn(i);
             }
 
-            // Write to file
+            // Write to file (create parent dirs if needed)
             try (FileOutputStream fos = new FileOutputStream(filePath)) {
                 workbook.write(fos);
             }
-            workbook.close();
+            if (workbook != null) workbook.close();
+
         } catch (IOException e) {
             e.printStackTrace();
         }
